[gd_scene load_steps=9 format=2]

[ext_resource path="res://juegodetriangulos/res/scripts/menus/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://juegodetriangulos/res/themes/main_menu_button.tres" type="StyleBox" id=2]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/exit_icon.png" type="Texture" id=3]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/settings_icon.png" type="Texture" id=4]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/title.png" type="Texture" id=5]
[ext_resource path="res://juegodetriangulos/res/themes/standard_medium.tres" type="Theme" id=6]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/continue_playing.png" type="Texture" id=7]
[ext_resource path="res://juegodetriangulos/res/sprites/ui/hud/retry.png" type="Texture" id=8]

[node name="hud" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -72.0
margin_right = 448.0
margin_bottom = 72.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blink_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="unblink_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="options" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -225.0
margin_right = -60.0
margin_bottom = -25.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 4 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = -225.0
margin_right = 260.0
margin_bottom = -25.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="."]
visible = false
margin_left = 60.0
margin_top = 25.0
margin_right = 260.0
margin_bottom = 225.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 8 )
expand_icon = true

[node name="close_pause_menu" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = 25.0
margin_right = -60.0
margin_bottom = 225.0
theme = ExtResource( 6 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="blink_timer" to="." method="_on_blink_timer_timeout"]
[connection signal="timeout" from="unblink_timer" to="." method="_on_unblink_timer_timeout"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="close_pause_menu" to="." method="_on_close_pause_menu_pressed"]
